css/styles.scss
---
layout: none
---

// Variables
$color--background: #ffffff;
$color--link: #00AAAD;
$color--heading: #5D5D5D;
$color--subheading: #9D9D9D;
$color--paragraph: #3D3D3D;
$color--keyline: #EDEDED;
$color--footnote: #ADADAD;
$width--keyline: .5rem;

// Globals & resets
html, body {
    padding: 0;
    margin: 0;
}

html {
    height: 100%;
    text-rendering: geometricPrecision;
}
body {
    min-height: 100%;
}

* {
    box-sizing: border-box;
}

// Container
.container {
    position: relative;
    width: 90%;
    max-width: 500px;
    margin: 0 auto;
    padding: 7rem 0 1.5rem;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    @media (max-width: 500px) {
        padding: 2.5rem 0 1.5rem;
    }
    &:before,
    &:after {
        content: "";
        position: absolute;
        z-index: -1;
        top: 0;
        left: 2.75rem;
        height: 100%;
        border-left: $width--keyline solid $color--keyline;
        animation: keyline .6s ease;
        @media (max-width: 500px) {
            left: 2rem;
        }
    }
    &:after {
        position: fixed;
        left: 0;
        width: 100%;
        border: none;
        animation: none;
        background: linear-gradient(to top, rgba($color--background, 1) 1%, rgba($color--background, 0) 5%,  rgba($color--background, 0) 95%, rgba($color--background, 1) 99%);
    }
}

@keyframes keyline {
    0%  { top: -100%; }
    100%{ top: 0; }
}

// Header
.header {
    position: relative;
}

// Content
.content {
    margin-left: 7rem;
    @media (max-width: 500px) {
        margin-left: 5.2rem;
    }
    &--header {
        padding-top: .5rem;
    }
    &--main {
        margin-bottom: 5rem;
    }
    &--footer {
        margin-top: 6.5rem;
    }
    &--site {
        margin-bottom: 3rem;
        padding-top: .35rem;
    }
}

// Footer
.footer {
}

// Graphics
img {
    max-width: 100%;
    height: auto;
}

.avatar {
    width: 4.5rem;
    height: 4.5rem;
    @media (max-width: 500px) {
        width: 3.5rem;
        height: 3.5rem;
    }
}

svg {
    
}

// Icons
.icon {
    &--network {
        width: 1.25rem;
        height: 1.25rem;
    }
    &--site {
        width: 2rem;
        height: 2rem;
        margin: .7rem;
        @media (max-width: 500px) {
            width: 1.5rem;
            height: 1.5rem;
            margin: 0.5rem;
        }
    }
}

// Lists
.list {
    list-style: none;
    margin: 0;
    padding: 0;
    &--sites {
        flex: 1 0 auto;
    }
}

// Items
.item {
    position: relative;
    &--network {
        display: inline-block;
        margin-right: .6rem;
    }
}

// Links
.link {
    display: inline-block;
    line-height: 0;
    &--circle {
        position: absolute;
        top: 0;
        left: 0;
        border: $width--keyline solid $color--keyline;
        background: $color--background;
        border-radius: 100%;
        overflow: hidden;
        margin: 0 .25rem .25rem;
        animation: circle 1s ease;
        @media (max-width: 500px) {
            margin: 0;
        }
    }
    &--site {
        margin: 0 .75rem .75rem;
        @media (max-width: 500px) {
            margin: 0.35rem 0.5rem 0.5rem;
        }
    }
}

@keyframes circle {
    0%  { opacity: 0; }
    25% { opacity: 0; }
    100%{ opacity: 1; }
}

// Typography
body {
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 300;
    font-size: 16px;
    line-height: 1.6rem;
    color: $color--paragraph;
}

h1, h2, a {
    margin-top: 0;
    font-weight: 400;
}

h1 {
    font-size: 2.4rem;
    margin-bottom: .85rem;
    color: $color--heading;
}

h2 {
    font-size: 1.5rem;
    margin-bottom: .5rem;
    color: $color--subheading; 
}

h3 {
    
}

p {
    margin-top: 0;
}

a {
    color: $color--link;
    text-decoration: none;
}

small {
    font-size: .85rem;
    font-weight: 400;
    color: $color--footnote;
}

